...
                      ),
                    ),
                  ),
                  Column(
                    children: [
                      TextFormField(
                        key: Key("email_reg"),

                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return AppLocalizations.of(context).login_screen_enter_email;
                          } else {
                            if (!value.contains("@") || !value.contains(".")) {
                              return AppLocalizations.of(context).login_screen_enter_email;
                            } else {
                              email = value;
                            }
                          }
                          return null;
                        },

                        keyboardType: TextInputType.emailAddress,
...
                        ),
                      ),
                      const SizedBox(
                        height: 16,
                      ),
                      TextFormField(
                        key: Key("name_reg"),
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return AppLocalizations.of(context).login_screen_please_enter_name_surname;
                          }
                          nameSurname = value;
                          return null;
...
                        ),
                      ),
                      const SizedBox(
                        height: 16,
                      ),
                      TextFormField(
                          key: Key("password_reg"),

                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return AppLocalizations.of(context).login_screen_password_warning;
                          } else {
                            password = value;
                          }
                          return null;
                        },
                        autofocus: false,
                        obscureText: _passwordVisible,
                        textInputAction: TextInputAction.next,
...
                        textCapitalization: TextCapitalization.sentences,
                      ),
                      const SizedBox(
                        height: 16,
                      ),
                      TextFormField(
                        key: Key("password2_reg"),
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return AppLocalizations.of(context).login_screen_same_password;
                          } else {
                            if (password != value) {
                              return AppLocalizations.of(context).login_screen_please_enter_same_password;
...
                        textCapitalization: TextCapitalization.sentences,
                      ),
                      const SizedBox(
                        height: 16,
                      ),
                      TextFormField(
                        key: Key("phone_reg"),
                        validator: (value) {
                          if (value == null ||
                              value.isEmpty ||
                              value.length < 17) {
                            return AppLocalizations.of(context).login_screen_enter_phone;
                          } else {
...
                      Consumer<AuthView>(
                        builder: (BuildContext context, value, Widget? child) {
                          if (value.authProcess == AuthProcess.idle) {
                            return SizedBox(
                              width: double.infinity,
                              child: ElevatedButton(
                                key: Key("register"),
                                onPressed: () async {
                                  if (formKey.currentState!.validate()) {
                                    phone = phone.replaceAll(" ", "");
                                    await value
                                        .createUserWithEmailAndPassword(
                                            email, password, phone, nameSurname)
...
