...
                    AppLocalizations.of(context).profile_screen_notifications,
                icon: MdiIcons.bellRingOutline,
                onTap: const NotificationScreen(),
              ),
              const Divider(),
              ProfileListTile(
                key: const Key("credit"),
                title: AppLocalizations.of(context).profile_screen_payment,
                icon: MdiIcons.creditCardOutline,
                onTap: const PaymentMethodsScreen(
                  isFromPayment: false,
                ),
              ),
...
                title: AppLocalizations.of(context).profile_screen_campaigns,
                icon: Icons.campaign_outlined,
                onTap: const CampaignScreen(),
              ),
              const Divider(),
              ProfileListTile(
                // key: Key("coupons"),

                title: AppLocalizations.of(context).profile_screen_couponcodes,
                icon: MdiIcons.ticketOutline,
                onTap: const CouponScreen(),
              ),
              /*
...
                icon: MdiIcons.tagOutline,
                onTap: LoginScreen(),
                subtitle: AppLocalizations.of(context).profile_screen_comingsoon,
              ),
              const Divider(),
              ProfileListTile(
                key: Key("profilesettings"),
                title: AppLocalizations.of(context).profile_screen_settings,
                icon: Icons.settings_outlined,
                onTap: SettingsScreen(),
                subtitle: AppLocalizations.of(context).profile_screen_comingsoon,
              ),*/
              const Divider(),
              ProfileListTile(
                key: const Key("other"),
                title: AppLocalizations.of(context).profile_screen_other,
                icon: MdiIcons.paperclip,
                onTap: const OtherScreen(),
              ),
              const Divider(),
              ProfileListTile(
...
